@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.2.1 (pending)
 ==========================
 
+- Allow work() operation with unused output ports
 - Created new test suite macro for array equality
 - WorkerActor push downstream only when data available
 - Fix Topology::waitInactive() activity checker
